# brave-core

./: Jenkinsfile  package-lock.json  package.json
android/: brave_java_sources.gni
browser/: about_flags.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc
browser/brave_federated_learning/: BUILD.gn  brave_federated_learning_service_factory.cc  brave_federated_learning_service_factory.h
browser/brave_shields/: brave_shields_web_contents_observer.cc
browser/net/: brave_network_audit_browsertest.cc
components/brave_federated_learning/: BUILD.gn  brave_federated_data_service.cc  brave_federated_data_service.h  brave_federated_learning_service.cc  brave_federated_learning_service.h
components/brave_federated_learning/data_stores/: data_store.cc  data_store.h  sample_data_store.cc  sample_data_store.h
components/brave_shields/common/: BUILD.gn  brave_shield_constants.h  brave_shields_panel.mojom
patches/: chrome-VERSION.patch  content-browser-service_worker-service_worker_content_settings_proxy_impl.cc.patch  content-browser-service_worker-service_worker_content_settings_proxy_impl.h.patch  content-browser-worker_host-shared_worker_content_settings_proxy_impl.cc.patch  content-browser-worker_host-shared_worker_content_settings_proxy_impl.h.patch  content-browser-worker_host-shared_worker_host.cc.patch  content-browser-worker_host-shared_worker_host.h.patch  content-public-browser-content_browser_client.cc.patch  content-public-browser-content_browser_client.h.patch  third_party-blink-public-mojom-worker-worker_content_settings_proxy.mojom.patch
(+49 files in other folders)
