import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "brave_shield_constants.h",
    "brave_shield_utils.cc",
    "brave_shield_utils.h",
    "features.cc",
    "features.h",
    "pref_names.cc",
    "pref_names.h",
  ]

  deps = [
    "//base",
    "//components/content_settings/core/common",
    "//brave/components/resources:strings",
    "//url",
    "//ui/base",
  ]
}

mojom("mojom") {
  sources = [
    "brave_shields.mojom",
    "brave_shields_panel.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//url/mojom:url_mojom_gurl",
  ]
}
